hphp/test/zend/good/ext/bz2/tests/004.php.skipif
<?php if (!extension_loaded("bz2")) print "skip"; ?>