hphp/test/zend/bad/tests/run-test/test008a.php.skipif
<?php
if (extension_loaded("Zend Optimizer")) die("skip Zend Optimizer is loaded");
?>